<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.udacity.shoestore.fragments.EditShoeFragment">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!--
    ScrollView layout chosen because the screen size might be to low to have all the elements visible
    in the main view
    LinearLayout chosen because it's the simplest layout implementation with this type of UI
    - ie elements on top of each other. (It is also adaptable to all screen)
   -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_shoe_label"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:padding="8dp"/>

            <TextView
                style="@style/AppTheme.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_shoe_name_label"/>

            <EditText
                android:id="@+id/editTextShoeName"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@={shoe.name}"
                android:hint="@string/shoe_name_label"
                android:maxLines="1"
                android:inputType="text"/>

            <TextView
                style="@style/AppTheme.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_company_name_label" />

            <EditText
                android:id="@+id/editTextShoeCompany"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoe.company}"
                android:hint="@string/company_name_label"
                android:maxLines="1"
                android:inputType="text"/>

            <TextView
                style="@style/AppTheme.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_shoe_size" />

            <EditText
                android:id="@+id/editTextShoeSize"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={shoe.size}"
                android:hint="@string/shoe_size_label"
                android:layout_marginBottom="32dp"/>

            <TextView
                style="@style/AppTheme.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_description_label" />

            <EditText
                android:id="@+id/editTextShoeDescription"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoe.description}"
                android:hint="@string/description_label"/>

            <Button
                android:id="@+id/addShoeButton"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_shoe_label"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"/>

            <Button
                android:id="@+id/cancelButton"
                style="@style/AppTheme.WhiteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_label"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</layout>