<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_nav"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.fragments.LoginFragment"
        android:label="@string/login_label"
        tools:layout="@layout/login_layout" >
        <action
            android:id="@+id/loginToWelcome"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:label="@string/welcome_label"
        android:name="com.udacity.shoestore.fragments.WelcomeFragment"
        tools:layout="@layout/welcome_layout" >
        <action
            android:id="@+id/welcomeToInstruction"
            app:destination="@id/instructionFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:label="@string/instruction"
        android:name="com.udacity.shoestore.fragments.InstructionFragment"
        tools:layout="@layout/instruction_layout" />
</navigation>