<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.fragments.InstructionFragment">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:gravity="center"
      android:layout_height="match_parent"
      android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:textColor="@android:color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_message"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:textColor="@android:color/white"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/instructionNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/white_button"/>

  </LinearLayout>
</layout>